Added simple chatbot fucntionality along with Login and registration features
