# resources/views/navbar.blade.php
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url('/displayHomeView') }}">Home</a>
+        <a class="navbar-brand" href="{{ url('/home') }}">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,9 +11,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url('/displayMoviesView') }}">Movies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url('/displayUserView') }}">Create User</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url('/displayRentView') }}">Rent Item</a>
