# routes/web.php
@@ -25,18 +25,18 @@ Route::get('/availableMovies', 'App\Http\Controllers\GetRoutesController@getAvai
 Route::get('/availableBooks', 'App\Http\Controllers\GetRoutesController@getAvailableBooks');
 Route::get('/dueRentals', 'App\Http\Controllers\GetRoutesController@getDueRentals');
 
-Route::get('/displayUserView', 'App\Http\Controllers\ViewController@displayUserView');
-Route::get('/displayHomeView', 'App\Http\Controllers\ViewController@displayHomeView');
 Route::get('/displayBooksView', 'App\Http\Controllers\ViewController@displayBookView');
 Route::get('/displayMoviesView', 'App\Http\Controllers\ViewController@displayMovieView');
 Route::get('/displayRentView', 'App\Http\Controllers\ViewController@displayRentView');
 Route::get('/displayReturnView', 'App\Http\Controllers\ViewController@displayReturnView');
 
 Route::post('/createUser', 'App\Http\Controllers\GetRoutesController@createUser');
+Route::post('/login', 'App\Http\Controllers\AuthController@login');
+
 Route::post('/rentItem', 'App\Http\Controllers\ItemController@rentItem');
 Route::post('/returnItem', 'App\Http\Controllers\ItemController@returnItem');
 
 Route::post('/chatbot', 'App\Http\Controllers\ChatBotController@chatbot');
-Auth::routes();
 
+Auth::routes();
 Route::get('/home', [App\Http\Controllers\HomeController::class, 'index'])->name('home');
